httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-pd-disaggregation
  namespace: llm-d-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: llm-d-infra-inference-gateway
  rules:
    - backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: inferencepool
          namespace: llm-d-system
          port: 8000
          weight: 1

  # parentRefs:
  #   - group: gateway.networking.k8s.io
  #     kind: Gateway
  #     name: infra-pd-inference-gateway
  # rules:
  #   - backendRefs:
  #       - group: inference.networking.k8s.io
  #         kind: InferencePool
  #         name: gaie-pd
  #         port: 8000
  #         weight: 1
      timeouts:
        backendRequest: 0s
        request: 0s
      matches:
        - path:
            type: PathPrefix
            value: /
